Added simple reset for buttons

--- a/web/src/main.css
+++ b/web/src/main.css
@@ -5,6 +5,13 @@ body {
   background-color: #09090a;
 }
 
+button {
+  color: inherit;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
 /* Box sizing rules */
 *,
 *::before,
